MongoPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: back-mongo
spec:
  nodeName: srv-1-back
  containers:
  - name: back-mongo
    image: mongo
    imagePullPolicy: IfNotPresent
