CesiApi-kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata :
  name: node-api-service
spec:
  selector:
    app: node-api
  type: NodePort
  ports: 
  - protocol: TCP
    port : 3000
    targetPort: 3000
    nodePort: 31110
