CesiClient-kubernetes-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-client-ingress
spec:
  tls:
   - hosts:
     - app.morse-messenger.com
     secretName: node-client
  rules:
    - host: app.morse-messenger.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: node-client-service
              port: 
                number: 8080
